Suppression du user (mauvaise redirection lors de l'ajout)

--- a/InsuranceFront/web/index.html
+++ b/InsuranceFront/web/index.html
@@ -5,8 +5,8 @@
         <title>Ma belle application cliente Web</title>
     </head>
     <body>
-        <a href="ServletLister">liste des utilisateurs</a>
-        <FORM ACTION="ServletLogout" METHOD=POST>
+        <a href="utilisateurs">Liste des utilisateurs</a>
+        <FORM ACTION="utilisateurs" METHOD=POST>
             <INPUT TYPE=SUBMIT VALUE="Logout">
         </FORM>
     </body>
