--- a/InsuranceFront/web/index.html
+++ b/InsuranceFront/web/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <a href="utilisateurs">Liste des utilisateurs</a>
-        <FORM ACTION="utilisateurs" METHOD=POST>
+        <FORM ACTION="ServletLogout" METHOD=POST>
             <INPUT TYPE=SUBMIT VALUE="Logout">
         </FORM>
     </body>
