--- a/InsuranceFront/web/LoginForm.html
+++ b/InsuranceFront/web/LoginForm.html
@@ -16,15 +16,17 @@
         <input class="mdl-textfield__input" type="text" id="nom" name="j_username">
         <label class="mdl-textfield__label" for="nom">Nom</label>
     </div>
+    <br>
     <div class="mdl-textfield mdl-js-textfield">
         <input class="mdl-textfield__input" type="password" id="pw" name="j_password">
         <label class="mdl-textfield__label" for="pw">Mot de passe</label>
     </div>
+    <br>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--primary" type="submit" value="login">
-        Button
+        Connexion
     </button>
     <button class="mdl-button mdl-js-button" type="reset" value="reset">
-        Button
+        Reset
     </button>
 </form>
 </body>
