--- a/InsuranceFront/web/index.html
+++ b/InsuranceFront/web/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <a href="utilisateurs">Liste des utilisateurs</a>
+        <a href="contrats">Liste des contrats</a>
+        <a href="assures">Liste des assurés</a>
         <FORM ACTION="ServletLogout" METHOD=POST>
             <INPUT TYPE=SUBMIT VALUE="Logout">
         </FORM>
