--- a/InsuranceFront/web/index.html
+++ b/InsuranceFront/web/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Ma belle application cliente Web</title>
-    </head>
-    <body>
-        <a href="utilisateurs">Liste des utilisateurs</a>
-        <a href="contrats">Liste des contrats</a>
-        <a href="assures">Liste des assurés</a>
-        <FORM ACTION="ServletLogout" METHOD=POST>
-            <INPUT TYPE=SUBMIT VALUE="Logout">
-        </FORM>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Ma belle application cliente Web</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-indigo.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+</head>
+<body  style="background-color: #008080">
+<div style="background-color: #FFF; width: 50%; margin: auto; margin-top: 100px; border-radius: 5px; padding: 20px; text-align: center;">
+    <h4>Bienvenu</h4>
+    <hr>
+    <a href="utilisateurs" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Liste des utilisateurs</a>
+    <a href="contrats" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Liste des contrats</a>
+    <a href="assures" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Liste des assurés</a>
+    <form action="ServletLogout" method=POST>
+        <button class="mdl-button mdl-js-button mdl-button--accent" type=submit value="Logout">Logout</button>
+    </form>
+</div>
+</body>
 </html>
