--- a/InsuranceFront/web/403.html
+++ b/InsuranceFront/web/403.html
@@ -8,10 +8,13 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body style="background-color: #008080">
-<div style="background-color: #FFF; width: 50%; margin: auto; margin-top: 100px; border-radius: 5px; padding: 20px; text-align: center;">
+<div style="background-color: #FFF; width: 75%; margin: auto; margin-top: 100px; border-radius: 5px; padding: 20px; text-align: center;">
     <h4>Error 403</h4>
     <hr>
     <img src="https://90min-images.s3.amazonaws.com/production/media/58613f23948db6b1e8000001.gif">
+    <br>
+    <br>
+    <a href="index.html" class="mdl-button mdl-js-button mdl-button--accent">Retour</a>
 </div>
 </body>
 </html>
