--- a/InsuranceFront/web/404.html
+++ b/InsuranceFront/web/404.html
@@ -8,10 +8,13 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body style="background-color: #008080">
-<div style="background-color: #FFF; width: 50%; margin: auto; margin-top: 100px; border-radius: 5px; padding: 20px;text-align: center;">
+<div style="background-color: #FFF; width: 75%; margin: auto; margin-top: 100px; border-radius: 5px; padding: 20px;text-align: center;">
     <h4>Error 404</h4>
     <hr>
     <img src="https://68.media.tumblr.com/877a4782b91c43ff1a7680ac17d681df/tumblr_nsr09cnoVI1tjahkno1_400.gif">
+    <br>
+    <br>
+    <a href="index.html" class="mdl-button mdl-js-button mdl-button--accent">Retour</a>
 </div>
 </body>
 </html>
