--- a/InsuranceFront/web/index.html
+++ b/InsuranceFront/web/index.html
@@ -8,15 +8,23 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body  style="background-color: #008080">
-<div style="background-color: #FFF; width: 50%; margin: auto; margin-top: 100px; border-radius: 5px; padding: 20px; text-align: center;">
+<div style="background-color: #FFF; width: 75%; margin: auto; margin-top: 100px; border-radius: 5px; padding: 20px; text-align: center;">
     <h4>Bienvenu</h4>
     <hr>
+    <form action="logout" method=POST>
+        <button class="mdl-button mdl-js-button mdl-button--accent" type=submit value="logout">Logout</button>
+    </form>
+    <h5>Admin</h5>
     <a href="utilisateurs" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Liste des utilisateurs</a>
+    <a href="types_de_contrat" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Liste des types de contrat</a>
+    <h5>Courtier</h5>
     <a href="contrats" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Liste des contrats</a>
     <a href="assures" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Liste des assurés</a>
-    <form action="ServletLogout" method=POST>
-        <button class="mdl-button mdl-js-button mdl-button--accent" type=submit value="Logout">Logout</button>
-    </form>
+    <a href="demandes" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Liste des demandes</a>
+    <h5>Assuré</h5>
+    <a href="mes_contrats" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Liste de mes contrats</a>
+    <a href="mes_demandes" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Liste de mes demandes</a>
+    <a href="souscrire" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Souscrire</a>
 </div>
 </body>
 </html>
